# medusa-discord

./: .env.example  .gitignore  Cargo.toml
src/: commands.rs  git.rs  main.rs  medusa.rs
tests/: integration.rs
